--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,3 +4,8 @@ human1:
   name: Human Mankind
   email: hmankind@example.com
   password_digest: <%= User.digest('password') %>
+  
+archer:
+  name: Sterling Archer
+  email: duchess@example.gov
+  password_digest: <%= User.digest('password') %>
